--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     
-<head th:replace="~{common/header :: head_fragment(title=日報一覧)}"></head>
+<head th:replace="(~{common/header :: head_fragment(title=日報一覧)})"></head>
 
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
@@ -27,10 +27,9 @@
                                     </thead>
                                     <tbody>
                                         <tr th:each="report:${reportList}">
-                                            <td class="align-middle" th:text="${report.name}"></td>
-                                            <td class="align-middle" th:text="${report.date}"></td>
+                                            <td class="align-middle" th:text="${report.reportDate}"></td>
                                             <td class="align-moddle" th:text="${report.title}"></td>
-                                            <td class="align-middle"><a th:href="@{/reports/{code}/(code=${reports.code})}" class="btn btn-primary">詳細</a></td>
+                                            <td class="align-middle"><a th:href="@{/reports/{id}/(id=${report.id})}" class="btn btn-primary">詳細</a></td>
                                         </tr>
                                     </tbody>
                                 </table>
