--- a/src/main/resources/templates/employees/update.html
+++ b/src/main/resources/templates/employees/update.html
@@ -39,6 +39,7 @@
                                 <p class="mb-1"></p>
                                 <div class="col-md-7">
                                     <input class="form-control" type="password" th:field="*{password}" th:errorclass="err" id="password">
+                                    <p>パスワードは変更する場合のみ入力してください</p>
                                     <span th:if="${passwordError} neq null" th:text="${passwordError}" class="text-danger"></span>
                                 </div>
                             </div>  
