--- a/src/main/resources/templates/reports/detail.html
+++ b/src/main/resources/templates/reports/detail.html
@@ -11,7 +11,7 @@
 
         <div class="mt-3 h-100 col-sm-10">
             <div class="container-fluid p-0">
-                <h1 th:text="'日報　詳細'" class="h3 mb-3"></h1>
+                <h1 th:text="'日報 詳細'" class="h3 mb-3"></h1>
             </div>
 
             <div class="mb-3 col-12 col-xxl-6">
@@ -25,11 +25,11 @@
                                 <table class="table table-striped">
                                     <tr>
                                         <th class="w-25">日付</th>
-                                        <td class="align-middle"　th:text="${#temporals.format(employee.createdAt, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                        <td class="align-middle"　th:text="${#temporals.format(report.reportDate, 'yyyy-MM-dd')}"></td>
                                     </tr>
                                     <tr>
                                         <th>氏名</th>
-                                        <td class="align-middle" th:text="${employee.name}"></td>
+                                        <td class="align-middle" th:text="${report.employee.name}"></td>
                                     </tr>
                                     <tr>
                                         <th>タイトル</th>
@@ -37,7 +37,9 @@
                                     </tr>
                                     <tr>
                                         <th>内容</th>
-                                        <pre class="align-middle" th:text="${report.content}"></pre>
+                                        <pre>
+                                        <td class="align-middle" th:text="${report.content}"></td>
+                                        </pre>
                                     </tr>                                    
                                     <tr>
                                         <th>登録日時</th>
@@ -50,7 +52,7 @@
                                 </table>
                                 <div class="mt-5 row g-1">
                                     <div class="col-auto">
-                                        <a th:href="@{/reports/{code}/update(code=${employee.code})}" class="btn btn-primary">更新</a>
+                                        <a th:href="@{/reports/{id}/update(id=${report.id})}" class="btn btn-primary">更新</a>
                                     </div>
                                     <div class="col-auto">
                                         <form name="form" th:action="@{/reports/{code}/delete(code=${code})}" th:method="post">
