--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="common/header :: head_fragment(title=従業員更新画面)"></head>
+    
+<head th:replace="common/header :: head_fragment(title=日報更新画面)"></head>
 
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
@@ -12,50 +12,47 @@
     <div class="mt-3 h-100 col-sm-10">
         <!-- コンテンツ -->
         <div class="container-fluid p-0">
-            <h1 class="h3 mb-3">従業員 更新</h1>
+            <h1 class="h3 mb-3">日報 更新</h1>
         </div>
         <div class="col-xl-12">
             <div class="card">
                 <div class="card-body">
-                    <form th:action="@{/employees/{code}/update(code=${employee.code})}" th:object="${employee}" th:method="post">
+                    <form th:action="@{/reports/{id}/update(id=${report.id})}" th:object="${report}" th:method="post">
                         <div class="wizard wizard-success mb-4">
                             <div class="mb-3">
-                                <label class="form-label" for="code">社員番号</label>
+                                <label class="form-label" for="reportDate">日付</label>
                                 <p class="mb-1"></p>
                                 <div class="col-md-7">
-                                    <input class="form-control" type="hidden" th:field="*{code}" th:text=*{code} th:errorclass="err" id="code">
+                                    <input class="form-control" type="text" th:field="*{reportDate}" th:text=*{reportDate} th:errorclass="err" id="id">
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label" for="name">氏名</label>
+                                <label class="form-label" for="employee.name">氏名</label>
                                 <p class="mb-1"></p>
                                 <div class="col-md-7">
-                                    <input class="form-control" type="text" th:field="*{name}" th:errorclass="err" id="name">
-                                    <span th:errors="*{name}" class="text-danger"></span>
+                                    <input class="form-control" type="hidden" th:field="*{employee.name}" id="employee.name">
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label" for="password">パスワード</label>
+                                <label class="form-label" for="title">タイトル</label>
                                 <p class="mb-1"></p>
                                 <div class="col-md-7">
-                                    <input class="form-control" type="password" th:field="*{password}" th:errorclass="err" id="password">
-                                    <p>パスワードは変更する場合のみ入力してください</p>
-                                    <span th:if="${passwordError} neq null" th:text="${passwordError}" class="text-danger"></span>
+                                    <input class="form-control" type="text" th:field="*{title}" th:errorclass="err" id="title">
                                 </div>
                             </div>  
                             <div class="mb-3">
-                                <label class="form-label" for="role">権限</label>
+                                <label class="form-label" for="content">内容</label>
                                 <p class="mb-1"></p>
                                 <div class="col-md-4">
-                                    <select class="form-select" th:field="*{role}" id="role">
-                                        <option th:each="item:${T(com.techacademy.entity.Employee.Role).values()}" th:value="${item}" th:text="${item.getValue()}" th:selected="*{role} == ${item}">
-                                    </select>
+                                    <pre>
+                                    <input class="form-control" th:field="*{content}" th:errorclass="err" id="content">
+                                    </pre>
                                 </div>
                             </div>                                    
                         </div>
                             <p class="mt-5">
                                 <input type="submit" value="更新" class="btn btn-primary">
-                                <a th:href="@{/employees}" class="btn btn-primary">戻る</a>
+                                <a th:href="@{/reports}" class="btn btn-primary">戻る</a>
                             </p>
                         </div>
                     </form>
@@ -64,4 +61,3 @@
         </div>
     </div>
 </body>
-
