--- a/src/main/resources/templates/employees/detail.html
+++ b/src/main/resources/templates/employees/detail.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: head_fragment(title=従業員詳細)"></head>
+<head th:replace="(~{common/header :: head_fragment(title=従業員詳細)})"></head>
 
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
         <div class="h-100 p-3 mb-2 bg-dark text-white col-sm-2">
-            <nav th:replace="common/side :: copy"></nav>
+            <nav th:replace="(~{common/side :: copy})"></nav>
         </div>
 
         <div class="mt-3 h-100 col-sm-10">
