--- a/src/main/resources/templates/reports/list.html
+++ b/src/main/resources/templates/reports/list.html
@@ -6,7 +6,7 @@
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
         <div class="h-100 p-3 mb-2 bg-dark text-white col-sm-2">
-            <nav th:replace="common/side :: copy"></nav>
+            <nav th:replace="(~{common/side :: copy})"></nav>
         </div>
         <div class="mt-3 h-100 col-sm-10">
             <!-- コンテンツ -->
@@ -27,7 +27,7 @@
                                     </thead>
                                     <tbody>
                                         <tr th:each="report:${reportList}">
-                                            <td class-"align-middle" th:text="${report.employee.name}"></td>
+                                            <td class="align-middle" th:text="${report.employee.name}"></td>
                                             <td class="align-middle" th:text="${report.reportDate}"></td>
                                             <td class="align-middle" th:text="${report.title}"></td>
                                             <td class="align-middle"><a th:href="@{/reports/{id}/(id=${report.id})}" class="btn btn-primary">詳細</a></td>
