--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html class="h-100" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     
-<head th:replace="common/header :: head_fragment(title=日報更新画面)"></head>
+<head th:replace="(~{common/header :: head_fragment(title=日報更新画面)})"></head>
 
 <body class="h-100 overflow-hidden">
     <div class="row h-100">
         <div class="h-100 p-3 mb-2 bg-dark text-white col-sm-2">
-            <nav th:replace="common/side :: copy"></nav>
+            <nav th:replace="(~{common/side :: copy})"></nav>
     </div>
     
     <div class="mt-3 h-100 col-sm-10">
@@ -24,6 +24,7 @@
                                 <p class="mb-1"></p>
                                 <div class="col-md-4">
                                     <input class="form-control" type="date" th:field="*{reportDate}" th:errorclass="err" id="reportDate">
+                                    <span th:errors="*{reportDate}" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="mb-3">
@@ -38,6 +39,7 @@
                                 <p class="mb-1"></p>
                                 <div class="col-md-7">
                                     <input class="form-control" type="text" th:field="*{title}" th:errorclass="err" id="title">
+                                    <span th:errors="*{title}" class="text-danger"></span>
                                 </div>
                             </div>  
                             <div class="mb-3">
@@ -45,6 +47,7 @@
                                 <p class="mb-1"></p>
                                 <div>
                                     <textarea cols="120" rows="8" wrap="soft" th:field="*{content}" maxlength="600" th:errorclass="err" id="content"></textarea>
+                                    <span th:errors="*{content}" class="text-danger"></span>
                                 </div>
                             </div>                                    
                         </div>
