--- a/src/main/resources/templates/reports/update.html
+++ b/src/main/resources/templates/reports/update.html
@@ -24,8 +24,8 @@
                                 <p class="mb-1"></p>
                                 <div class="col-md-4">
                                     <input class="form-control" type="date" th:field="*{reportDate}" th:errorclass="err" id="reportDate">
-                                    
                                     <span th:errors="*{reportDate}" class="text-danger"></span>
+                                    <span th:if="${reportDateError} neq null" th:text="${reportDateError}" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="mb-3">
