--- a/src/main/resources/templates/employees/list.html
+++ b/src/main/resources/templates/employees/list.html
@@ -3,7 +3,7 @@
 
 <head th:replace="(~{common/header :: head_fragment(title=従業員一覧)})"></head>
 
-<body class="h-100 overflow-hidden">
+<body class="h-100 overflow-scroll">
     <div class="row h-100">
         <div class="h-100 p-3 mb-2 bg-dark text-white col-sm-2">
             <nav th:replace="(~{common/side :: copy})"></nav>
